--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -89,12 +89,13 @@
                                         </p>
                                         <form action="/settings/imageServer" method="post">
                                             <div class="mb-3">
-                                              {{- userProxyServer := CookieList["pixivfe-ImageProxy"] }}
-                                              {{- if isset(.userImageProxy) -}}
+                                              <!-- TODO: there's probably a better way of doing this -->
+                                              {{ a, b := CookieList["pixivfe-ImageProxy"] }}
+                                              {{- if a != "" -}}
                                               <label for="current-image-proxy" class="form-label fw-bold">
                                                 Current image proxy server
                                               </label>
-                                              <input class="form-control" type="text" value="{{ userProxyServer }}" aria-label="Current image proxy" id="current-image-proxy" disabled readonly>
+                                              <input class="form-control" type="text" value="{{ a }}" aria-label="Current image proxy" id="current-image-proxy" disabled readonly>
                                               <div id="current-image-proxy-help" class="form-text">
                                                   The image proxy server currently set.
                                               </div>
