--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -341,6 +341,7 @@
                                           <i class="bi bi-exclamation-triangle-fill"></i> Exercise caution when modifying these settings. Incorrect values may adversely affect PixivFE's functionality or your browsing experience.
                                       </p>
                                   </div>
+
                                     <li class="list-group-item bg-body-tertiary pt-0 pb-4 px-0">
                                         <h3 class="h5 fw-bold mb-3">Cookie values</h3>
                                         <!-- <p>
@@ -351,20 +352,44 @@
                                             View and edit individual cookie values. This is useful for fine-tuning specific preferences or troubleshooting issues.
                                         </p>
                                         {{- range k, v := CookieList }}
+                                        {{ CSRFToken, _ := CookieList["pixivfe-CSRF"] }}
                                         <div class="mb-3">
-                                            <h4 class="h6 fw-bold">{{k}}</h4>
-                                            <form action="/settings/set-cookie" method="post" class="row g-2">
+                                          <h4 class="h6 fw-bold">{{k}}</h4>
+
+                                          <!-- Start Set Cookie Form -->
+                                          <form action="/settings/set-cookie" method="post" class="row g-2">
+
+                                            <!-- Hidden Input for Cookie Key -->
+                                            <input type="hidden" name="key" value="{{k}}" />
+
+                                            <!-- Input Field for Cookie Value -->
                                             <div class="col-auto">
-                                                <input type="hidden" name="key" value="{{k}}" />
-                                                <input type="text" class="form-control" name="value" value="{{v}}" />
+                                              <label class="visually-hidden" for="cookieValue-{{k}}">Cookie Value</label>
+                                              <input id="cookieValue-{{k}}" type="text" class="form-control" name="value" value="{{v}}" />
                                             </div>
+
+                                            <!-- Set Button -->
                                             <div class="col-auto">
-                                                <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Set</button>
+                                              <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Set</button>
                                             </div>
-                                            </form>
+                                          </form>
+                                          <!-- End Set Cookie Form -->
+
+                                          <!-- Start Clear Cookie Form -->
+                                          <form action="/settings/clear-cookie" method="post" class="row g-2 mt-2">
+                                            <input type="hidden" name="key" value="{{k}}" />
+
+                                            <!-- Clear Button -->
+                                            <div class="col-auto">
+                                              <button type="submit" class="btn btn-danger fw-bold rounded-pill">Clear</button>
+                                            </div>
+                                          </form>
+                                          <!-- End Clear Cookie Form -->
+
                                         </div>
                                         {{- end }}
                                         </li>
+
                                         <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
                                         <h3 class="h5 fw-bold mb-3">Raw settings</h3>
                                         <p>
