disable hx-boost on settings page

--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-  <div class="row justify-content-center mb-5">
+  <div class="row justify-content-center mb-5" data-hx-boost="false">
     <div class="col-12 col-lg-9">
         <div class="mb-4">
             <h1 class="h3 fw-bold mb-3">Settings</h1>
