--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -57,7 +57,7 @@
                                           The underscore separates your member ID (left side) from a random string (right side).
                                       </div>
                                     </div>
-                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Log in</button>
+                                    <button type="submit" class="btn btn-primary fw-bold rounded-pill">Log in</button>
                                 </form>
                                 </li>
                                 <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
@@ -297,7 +297,7 @@
                                                 </div>
                                             </div>
 
-                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
+                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Save</button>
                                         </form>
                                     </li>
 
@@ -322,7 +322,7 @@
                                                 <label class="form-check-label fw-bold" for="tx-ori-n">Don't force (default from Pixiv)</label>
                                                 <div id="tx-ori-n-help" class="form-text">Uses the original text orientation as set by the author on Pixiv. This is the default option and respects the intended layout of the novel.</div>
                                             </div>
-                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
+                                            <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Save</button>
                                         </form>
                                     </li>
 
