--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -130,21 +130,21 @@
                       {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
                       {{- hideAI := CookieList["pixivfe-HideArtAI"] }}
                       <div class="mb-3 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="filter-r18" name="filter-r18" value="1" {{- if hideR18 !="" }}checked{{- end }} />
+                        <input class="form-check-input" type="checkbox" role="switch" id="filter-r18" name="filter-r18" value="1" {{- if hideR18 != "" }}checked{{- end }} />
                         <label class="form-check-label fw-bold" for="filter-r18">Hide explicit content (R-18)</label>
                         <div id="filter-r18-help" class="form-text">
                           Hides artwork tagged as R18. This includes sexually explicit material suitable for adults (<a href="https://dic.pixiv.net/en/a/R-18" target="_blank" and rel="noopener noreferrer" class="text-decoration-none">entry on pixiv Encyclopedia<i class="bi bi-box-arrow-up-right align-top small ms-1"></i></a>).
                         </div>
                       </div>
                       <div class="mb-3 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="filter-r18g" name="filter-r18g" value="1" {{- if hideR18G !="" }}checked{{- end }} />
+                        <input class="form-check-input" type="checkbox" role="switch" id="filter-r18g" name="filter-r18g" value="1" {{- if hideR18G != "" }}checked{{- end }} />
                         <label class="form-check-label fw-bold" for="filter-r18g">Hide ero-guro content (R-18G)</label>
                         <div id="filter-r18g-help" class="form-text">
                           Hides artwork tagged as R18G. This includes extremely graphic or violent material (<a href="https://dic.pixiv.net/en/a/R-18G" target="_blank" and rel="noopener noreferrer" class="text-decoration-none">entry on pixiv Encyclopedia<i class="bi bi-box-arrow-up-right align-top small ms-1"></i></a>).
                         </div>
                       </div>
                       <div class="mb-3 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="filter-ai" name="filter-ai" value="1" {{- if hideAI !="" }}checked{{- end }} />
+                        <input class="form-check-input" type="checkbox" role="switch" id="filter-ai" name="filter-ai" value="1" {{- if hideAI != "" }}checked{{- end }} />
                         <label class="form-check-label fw-bold" for="filter-ai">Hide AI-generated artworks</label>
                         <div id="filter-ai-help" class="form-text">Hides artwork that has been tagged as AI-generated. This helps focus on human-created content.</div>
                       </div>
@@ -158,7 +158,7 @@
                     <form action="/settings/thumbnailToNewTab" method="post">
                       {{- ttntValue := CookieList["pixivfe-ThumbnailToNewTab"] }}
                       <div class="mb-3 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="ttnt-switch" name="ttnt" value="_blank" {{- if ttntValue="" ="_blank" }}checked{{- end }} />
+                        <input class="form-check-input" type="checkbox" role="switch" id="ttnt-switch" name="ttnt" value="_blank" {{- if ttntValue == "_blank" }}checked{{- end }} />
                         <label class="form-check-label fw-bold" for="ttnt-switch">Open in new tab</label>
                         <div id="ttnt-switch-help" class="form-text">When enabled, clicking on artwork thumbnails will open the full artwork in a new browser tab.</div>
                       </div>
