--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -1,12 +1,24 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container">
-  <h1>Newest works from all users</h1>
-  <div class="switcher">
-    <div class="switch-title">Filter</div>
-    <a href="/newest" class="switch-button">Safe</a>
-    <a href="/newest?mode=r18" class="switch-button">R-18</a>
+<div class="row justify-content-center">
+  <div class="col-sm-12 col-md-9">
+    <h1 class="h2 fw-bold mb-3">Newest works from all users</h1>
+
+    <div class="card border-0 mb-5">
+      <div class="card-body rounded-5 bg-body-tertiary p-4">
+        <h2 class="h4 fw-bold mb-3">Filter</h2>
+        <div class="btn-group" role="group" aria-label="Content filter">
+          <a href="/newest" class="btn btn-secondary fw-bold rounded-pill me-3">Safe</a>
+          <a href="/newest?mode=r18" class="btn btn-danger fw-bold rounded-pill">R-18</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="artwork-container">{{ include "fragments/small-tn" .Items }}</div>
+
+  <div class="col-12">
+    <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
+      {{ include "fragments/small-tn" .Items }}
+    </div>
+  </div>
 </div>
 {{- end }}
